<resources>
    <string name="app_name">decathlonapp</string>
    <string name="delivering_to_411001">Delivering To 411001</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo1">TODO</string>
    <string name="login">LOGIN</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="_3_21_8_it_s_up_to_date">3.21.8 (It\'s up-to-date)</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="all_the_stuff_you_need_to_know">All the stuff you need to know</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="import_for_both_of_us">Import for both of us</string>
    <string name="return_policy">Return Policy</string>
    <string name="very_important_for_you">Very Important for you ;)</string>
    <string name="support">Support</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="prachi_pardeshi">Prachi Pardeshi</string>
    <string name="_9767976210">9767976210</string>
    <string name="logout">Logout</string>
    <string name="no_items_present_in_cart">No Items Present In Cart</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="checkout">CheckOut</string>
    <string name="change1">change</string>
    <string name="decathlon1">Decathlon</string>
    <string name="search_70_sports_5000_products1">search 70 sports 5000 products</string>
    <string name="minimum_2_rears_warrenty">Minimum 2 rears warrenty</string>
    <string name="todo">TODO</string>
    <string name="drive_through_free_pickup_service">Drive Through/Free Pickup Service</string>
    <string name="safe_delivery_at_your_doorstep">Safe Delivery At Your Doorstep</string>
    <string name="easy_90_days_returns">Easy 90 Days Returns</string>
    <string name="running_amp_walking"><![CDATA[Running & Walking]]></string>
    <string name="cycling">Cycling</string>
    <string name="skip1">skip</string>
    <string name="next1">next</string>
    <string name="lets_start_with_your">Lets Start With Your</string>
    <string name="phone_email">Phone/Email</string>
    <string name="enter_phone_number_email_id">Enter phone number/email id</string>
    <string name="enter_otp_here">Enter OTP Here</string>
    <string name="get_otp">Get OTP</string>
    <string name="men_s_urban_walking_shoes_pw_100_grey">Men\'s Urban Walking Shoes PW 100-grey</string>
    <string name="id_8486177">ID:8486177</string>
    <string name="_599">₹ 599</string>
    <string name="mrp_899">MRP ₹ 899</string>
    <string name="_4_431_5">4.43/5</string>
    <string name="post_a_review">POST A REVIEW</string>
    <string name="delivery_and_services">DELIVERY AND SERVICES</string>
    <string name="currently_showing_the_delivery_options_for_pincode">Currently showing the delivery options for pincode</string>
    <string name="_562101">562101</string>
    <string name="check">Check</string>
    <string name="home_delivery_by_saturday_31st_jul">Home Delivery by Saturday, 31st Jul</string>
    <string name="order_by_06_00_pm">Order by 06:00 pm</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="text">text</string>
    <string name="advantages">ADVANTAGES</string>
    <string name="technical_information">TECHNICAL INFORMATION</string>
    <string name="reviews">REVIEWS</string>
    <string name="still_confused_need_assitance">Still confused? Need Assitance?</string>
    <string name="chat_with_us">chat with us</string>
    <string name="product_information">PRODUCT INFORMATION</string>
    <string name="mrp1">MRP</string>
    <string name="_899_inclusive_of_all_taxes">₹ 899 Inclusive of all taxes</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="bangladesh_china_india_vietnam">Bangladesh, china,India,Vietnam</string>
    <string name="manufactured_imported_by">Manufactured/Imported By</string>
    <string name="decathlon_sports_india">decathlon_sports_india</string>
    <string name="survey_no_78_10_a2_chickajala_village_bellary_rd">Survey No-78/10, A2 - Chickajala Village, bellary Rd</string>
    <string name="bengaluru_562157">Bengaluru - 562157</string>
    <string name="karnataka_india">Karnataka, India</string>
    <string name="for_customer_compliants_assistance_please_contact">For Customer Compliants/ Assistance, Please contact</string>
    <string name="above_importer_address_or_tel_91_7676798989_email">above importer address or Tel: +91 – 7676798989 Email:</string>
    <string name="care_india_decathlon_com">care.india@decathlon.com</string>
    <string name="add_to_bag">Add To bag</string>
    <string name="change">change</string>
    <string name="decathlon">Decathlon</string>
    <string name="search_70_sports_5000_products">search 70 sports 5000 products</string>
    <string name="skip2">skip</string>
    <string name="next2">next</string>
    <string name="skip3">skip</string>
    <string name="next3">next</string>
    <string name="skip4">skip</string>
    <string name="next4">next</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="_59921">599</string>
    <string name="mrp2">MRP</string>
    <string name="_8992">899</string>
    <string name="description2">Description</string>
    <string name="_4_5_52">4.5/5</string>
    <string name="_59922">599</string>
    <string name="mrp3">MRP</string>
    <string name="_8939">899</string>
    <string name="descripti3on">Description</string>
    <string name="_4_5_35">4.5/5</string>
    <string name="_59392">599</string>
    <string name="mr4p">MRP</string>
    <string name="_8499">899</string>
    <string name="desc4ription">Description</string>
    <string name="_4_54_5">4.5/5</string>
    <string name="_4_55_5">4.5/5</string>
    <string name="description5">Description</string>
    <string name="_8995">899</string>
    <string name="mrp5">MRP</string>
    <string name="_59925">599</string>
    <string name="_59926">599</string>
    <string name="mrp6">MRP</string>
    <string name="_8996">899</string>
    <string name="description6">Description</string>
    <string name="_4_5_56">4.5/5</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="description">Description</string>
    <string name="_899">899</string>
    <string name="mrp">MRP</string>
    <string name="_5992">599</string>
    <string name="hockey_stick">Hockey stick</string>
    <string name="rs_500">Rs. 500</string>
    <string name="_4_43_5">4.43/5</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="your_cart">Your Cart</string>
    <string name="proceed_to_check_out">proceed to Check out</string>
    <string name="total_n_2323_rs">Total:\n 2323 rs</string>
    <string name="_100_nsecure_payment">100%\nSecure Payment</string>
</resources>