<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CheckoutActivity">


    <EditText
        android:layout_margin="10dp"
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:autofillHints="" />
    <EditText
        android:layout_margin="10dp"
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_your_phone_number"
        android:inputType="number"
        tools:ignore="TextFields"
        android:autofillHints="" />
    <EditText
        android:layout_margin="10dp"
        android:layout_below="@+id/etPhone"
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_your_address"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <Button
        android:layout_below="@id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:id="@+id/btnCheckout"
        android:background="#fefe33"
        android:text="@string/checkout"
        />

</RelativeLayout>