<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPhone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lets_start_with_your"
        android:textColor="#0E0953"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/idEdtPhoneNumber"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/phone_email"
        android:textColor="#0E0953"
        android:textSize="40sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/idEdtPhoneNumber"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idBtnGetOtp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangle2"
        android:hint="@string/enter_phone_number_email_id"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:autofillHints=""
        android:inputType="number"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/idEdtOtp"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_above="@id/idBtnVerify"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangle2"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:hint="@string/enter_otp_here"/>

    <Button
        android:id="@+id/idBtnGetOtp"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_above="@id/idEdtOtp"
        android:layout_marginBottom="32dp"
        android:text="@string/get_otp"
        android:background="#36A4DF"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/idBtnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:background="#36A4DF"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="VERIFY"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>